@@ -1076,13 +1076,13 @@ void buildSpellArray()
 
   discArray[SKILL_FISHLORE] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "fishlore", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_1, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
 
-  discArray[SKILL_TROLLISH] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "trollish", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
+  discArray[SKILL_TROLLISH] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "trollish", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
 
-  discArray[SKILL_BULLYWUGCROAK] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "bullycroak", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
+  discArray[SKILL_BULLYWUGCROAK] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "bullycroak", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
 
-  discArray[SKILL_AVIAN] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "avian", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
+  discArray[SKILL_AVIAN] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "avian", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
 
-  discArray[SKILL_FISHBURBLE] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "fish burble", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
+  discArray[SKILL_FISHBURBLE] = new spellInfo(SKILL_GENERAL, DISC_ADVANCED_ADVENTURING, DISC_ADVANCED_ADVENTURING, STAT_EXT, "fish burble", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_50, LEARN_2, START_DO_25, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_SKILLS, 0.0, 0, 0);
 
 // disc_adventuring
 
